远程调用ds增加参数

--- a/WebContent/batchTask/batchTaskManage.html
+++ b/WebContent/batchTask/batchTaskManage.html
@@ -223,7 +223,7 @@ function queryResult(){
 	                                    <option value="19">拜访记录按门店数据</option>
 	                                </optgroup>
               						<optgroup label="用户数据任务调度">
-	                                	<option value="20">用户档案</option>
+	                                	<option value="20">用户档案调度</option>
 	                                    <option value="21">用户打小B端标签</option>
 	                                    <option value="22">订单打小B端标签</option>
 	                                </optgroup>
