--- a/WebContent/data_access/human_store_edit.html
+++ b/WebContent/data_access/human_store_edit.html
@@ -194,17 +194,17 @@ Date.prototype.format=function(fmt) {
 			} */
 		}
 		
-		if(zw=='线上产品专员'){
-			//线上产品专员  门店IDs
+		if(zw=='线上服务专员'){
+			//线上服务专员  门店IDs
 			var selectStoreIds = $("#selectStoreIds").val();
 			if(selectStoreIds==null||selectStoreIds.trim()==""){
-				$$.showMessage("系统信息","请选择线上产品专员管辖范围 !");
+				$$.showMessage("系统信息","请选择线上服务专员管辖范围 !");
 				return ;
 			}
 		}
 		
 		
-		if(zw!='市场专员'&&zw!='线上产品专员'){
+		if(zw!='市场专员'&&zw!='线上服务专员'){
 			var store_name = $('#storename').val();
 			if (store_name == "" || store_name == null) {
 				$$.showMessage("系统信息","请填写门店 !  ");
@@ -420,7 +420,7 @@ Date.prototype.format=function(fmt) {
 						tmpphone=$("#phone").val();
 						
 						//..................................
-						if(va=="线上产品专员"){
+						if(va=="线上服务专员"){
 							$("#selectStoreIds").val(jsonData.selectStoreIds);
 							$("#selectStoreName").val(jsonData.selectStoreNames);
 							$("#showSelectName").html($("#selectStoreName").val());
@@ -530,14 +530,14 @@ Date.prototype.format=function(fmt) {
 												if(va=="副店长"){
 													$("#srczw").show();
 												}
-												if(va=="服务专员"||va=="线上产品专员"){
+												if(va=="服务专员"||va=="线上服务专员"){
 													$("#career_group").show();
 													$("#syqfont").show();
 												}else{
 													$("#career_group").hide();
 													$("#syqfont").hide();
 												}
-												if(va=="市场专员"||va=="线上产品专员"){
+												if(va=="市场专员"||va=="线上服务专员"){
 													$("#storename").css('background','#EDEDED');
 													$("#storename").attr("readonly","true");
 													$("#storename").val('');
@@ -592,7 +592,7 @@ Date.prototype.format=function(fmt) {
 				$("#storename").attr("readonly","");
 			}
 			
-			if(zw!=null&&zw.trim()=="线上产品专员"){
+			if(zw!=null&&zw.trim()=="线上服务专员"){
 				$("#storename").css('background','#EDEDED');
 				$("#storename").attr("readonly","true");
 				$("#storename").val('');
@@ -617,7 +617,7 @@ Date.prototype.format=function(fmt) {
 				$("#srczw").hide();
 			}
 			
-			if(zw!=null&&(zw.trim()=="服务专员"||zw.trim()=="线上产品专员")){
+			if(zw!=null&&(zw.trim()=="服务专员"||zw.trim()=="线上服务专员")){
 				$("#career_group").show();
 				$("#syqfont").show();
 			}else{
@@ -630,7 +630,7 @@ Date.prototype.format=function(fmt) {
 		
 		
 		var loadzw = $("#zw  option:selected").val();
-		if(loadzw!=null&&loadzw.trim()=="线上产品专员"){
+		if(loadzw!=null&&loadzw.trim()=="线上服务专员"){
 			$("#storefw").show();
 		}else{
 			$("#storefw").hide();
@@ -667,7 +667,7 @@ Date.prototype.format=function(fmt) {
 		o["zw"] = $("#zw  option:selected").val();
 		//事业群 
 		var fwzw = $("#zw  option:selected").val();
-		if(fwzw=="服务专员"||fwzw=="线上产品专员"){
+		if(fwzw=="服务专员"||fwzw=="线上服务专员"){
 			o["career_group"] = $("#career_group  option:selected").val();
 		}else{
 			o["career_group"] = "";
@@ -682,7 +682,7 @@ Date.prototype.format=function(fmt) {
 		}
 		
 		
-		if(o["zw"].indexOf("线上产品专员")>-1){
+		if(o["zw"].indexOf("线上服务专员")>-1){
 			o["selectStoreIds"]=$("#selectStoreIds").val();
 		}
 		
@@ -1045,7 +1045,7 @@ Date.prototype.format=function(fmt) {
 						<option value="库房管理员">库房管理员</option>
 						<option value="仓库主管">仓库主管</option>
 						<option value="配送主管">配送主管</option>
-						<option value="线上产品专员">线上产品专员</option>
+						<option value="线上服务专员">线上服务专员</option>
 					</select>
 					<font id="syqfont">事业群</font>
 					<select id="career_group" name="career_group" style="width: 25%;display:inline-block;height:30px;padding:0;margin-top:10px;" class="form-control">
@@ -1064,7 +1064,7 @@ Date.prototype.format=function(fmt) {
 			
 			
 		    <tr id="storefw">
-				<!-- 线上产品专员 选择多个门店 -->
+				<!-- 线上服务专员 选择多个门店 -->
 				<td>
 	                	<p style="float:left; padding-top:11px;"><font color="red">*</font>管辖范围：
 	                    <label id="showSelectName"></label>
