修改门店门店档案查询重置bug

--- a/WebContent/crm/dynamicData_storeInfo.html
+++ b/WebContent/crm/dynamicData_storeInfo.html
@@ -697,9 +697,9 @@
   	  	  }else if(target==1){//城市级别
   	  		$("#store_id_area").val("");
   	    	$("#store_name-search_area").empty();
-  	    	$("#city_name_area").val(cityName);
+  	    	$("#city_name_area").val("");
   	  	  }else if(target==2){//店长
-  	  			$("#store_name_area").val(storeName);
+  	  			$("#store_name_area").val("");
   	  	  }
   	  	searchInfo_area(1);
     }
