--- a/WebContent/crm/dynamicData_tinyvillage.html
+++ b/WebContent/crm/dynamicData_tinyvillage.html
@@ -748,8 +748,11 @@
       		
   	  	  }else if(target==1){//城市级别
   	  		$("#store_id_area").val("");
+  	  		$("#store_name_area").empty();
   	    	$("#store_name-search_area").empty();
-  	    	$("#city_name_area").val("");
+  	    	$("#city_id_area").val("");
+      		$("#city_name-search_area").empty();
+      		$("#city_name_area").val("");
   	  	  }else if(target==2){//店长
   	  			$("#store_name_area").val("");
   	  	  }
