--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -110,7 +110,7 @@
                                         <dd><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
                                         <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
                                         <dd><a href="javascript:searchTinyvillageData()"><span class="fa fa-clipboard"></span>小区档案</a></dd>
-                                    	<dd><a href="javascript:searchStoreData()"><span class="fa fa-clipboard"></span>门店档案</a></dd>
+                                    	<dd><a href="javascript:searchStoreData()"><span class="fa fa-clipboard"></span>门店信息档案</a></dd>
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>排名数据</dt>
