添加同步处理

--- a/WebContent/data_access/human_store_edit.html
+++ b/WebContent/data_access/human_store_edit.html
@@ -567,7 +567,7 @@ Date.prototype.format=function(fmt) {
 				//$("#express_company").attr("value",express_company);
 				//$("#express_company option[text='"+express_company+"']").attr("selected", true);
 			}
-		});
+		},false);
 		
 		$("#humanstatus").change(function(){
 			var humanstatus = $("#humanstatus  option:selected").val();
