--- a/WebContent/crm/user.html
+++ b/WebContent/crm/user.html
@@ -480,17 +480,17 @@ function initcurruser(){
 							$("#cur_card_name").html(curr_user.name);
 							$("#cur_card_no").html(curr_user.zw+" "+curr_user.employeeId);
 							initStore();
-							getUserHeadPortraits();
+							
 						}else{
 							$("#cur_card_name").html(curr_user.name);
 							$("#cur_store_name").html("");
 							$("#cur_employee_no").html("");
 							$("#cur_card_no").parent().html("");
-							$(".text-yellow").html(curr_user.name);
-							$("#employee_no").html("");
-							$("#remark").html("");
-							$("#phone").html(curr_user.phone);
-							$("#storename").html("");
+							//$(".text-yellow").html(curr_user.name);
+							//$("#employee_no").html("");
+							//$("#remark").html("");
+							//$("#phone").html(curr_user.phone);
+							//$("#storename").html("");
 						}
 						
 					}
@@ -550,6 +550,7 @@ function initStore(){
 	
 	
 	function initemployeeinfo(employee_no){
+		getUserHeadPortraits();
 		//取得当前登录人的门店
 		doManager("HumanresourcesManager", "queryEmployeeInfoByNo",employee_no,
 					function(data, textStatus, XMLHttpRequest) {
@@ -656,7 +657,7 @@ function initStore(){
 							 var customer_id = obj['customer_id'];
 							 var store_id = obj['store_id'];
 							 var employee_name = obj['employee_name'];
-							 var order_date = obj['order_date'];
+							 var order_date = obj['sign_time'];
 							 var mobilephone = obj['mobilephone'];
 							 var customer_name = obj['customer_name']==null?"":obj['customer_name'];
 							 var eshop_pro_name = obj['eshop_pro_name'];
