--- a/WebContent/crm/index_area.html
+++ b/WebContent/crm/index_area.html
@@ -477,7 +477,7 @@
               var employee_b_name = jsonArea.employee_b_name==null?"无":jsonArea.employee_b_name;
               var employee_a_no = jsonArea.employee_a_no==null?"":jsonArea.employee_a_no;
               var employee_b_no = jsonArea.employee_b_no==null?"":jsonArea.employee_b_no;
-              var userStr= "<a style='color:#2138ec' href=\"javaScript:goToUser('"+employee_a_no+"')\">"+employee_a_name+"(A)</a>&nbsp;&nbsp;&nbsp;&nbsp;<a style='color:#2138ec' href=\"javaScript:goToUser('"+employee_b_no+"')\">"+employee_b_name+"(B)</a>";
+              var userStr= "<a style='text-decoration:underline' href=\"javaScript:goToUser('"+employee_a_no+"')\">"+employee_a_name+"</a>(A)&nbsp;&nbsp;&nbsp;&nbsp;<a style='text-decoration:underline' href=\"javaScript:goToUser('"+employee_b_no+"')\">"+employee_b_name+"</a>(B)";
               $("#area_manager").html(userStr); 
               querySeveralDaysPerformanceOfArea("gmv");
               queryCurMonthPerformanceOfArea("gmv");
@@ -489,7 +489,7 @@
   
   function goToUser(no){
 	  if(no!=null&&no!=""){
-		  window.open("user.html?employee_no="+encode64(no),'userpage');
+		  window.open("user.html?employee_no="+encode64(no));
 	  }
 	  
 	 
