--- a/WebContent/crm/dynamicData_storeInfo.html
+++ b/WebContent/crm/dynamicData_storeInfo.html
@@ -195,7 +195,7 @@
 	                      <th width="6%">目前状态</th>
 	                      <th width="8%">门店开业时间</th>
 	                      <th width="6%">属性</th>
-	                      <th width="14%">位置</th>
+	                      <th width="14%">地址</th>
 	                      <th width="6%">店长</th>
 	                      <th width="8%">门店电话</th>
 	                    </tr>
