修改线上服务专员不必填所管辖门店

--- a/WebContent/data_access/human_store_add.html
+++ b/WebContent/data_access/human_store_add.html
@@ -160,6 +160,7 @@ Date.prototype.format=function(fmt) {
 			} */
 		}
 		
+		/*
 		if(zw=='线上服务专员'){
 			//线上服务专员  门店IDs
 			var selectStoreIds = $("#selectStoreIds").val();
@@ -168,6 +169,7 @@ Date.prototype.format=function(fmt) {
 				return ;
 			}
 		}
+		*/
 		
 		
 		var humanstatus = $("#humanstatus  option:selected").val();
@@ -469,6 +471,8 @@ Date.prototype.format=function(fmt) {
 		
 		if(o["zw"].indexOf("线上服务专员")>-1){
 			o["selectStoreIds"]=$("#selectStoreIds").val();
+		}else{
+			o["selectStoreIds"]="";
 		}
 		
 		
@@ -846,12 +850,12 @@ Date.prototype.format=function(fmt) {
 			<tr id="storefw">
 				<!-- 线上服务专员 选择多个门店 -->
 				<td>
-	                	<p style="float:left; padding-top:11px;"><font color="red">*</font>管辖范围：
+	                	<p style="float:left; padding-top:11px;"><!-- <font color="red">*</font> -->管辖范围：
 	                    <label id="showSelectName"></label>
 	                    <input type="hidden" id="selectStoreName" value="" />
 	                    <input type="hidden" id="selectStoreIds" value="" />
-	                    <button id="storefwbtn" class="btn btn-primary" onclick="showStoreWinNoEnter(setStoreSelect);">选择门店</button> 
-	            </td>
+<!-- 	                    <button id="storefwbtn" class="btn btn-primary" onclick="showStoreWinNoEnter(setStoreSelect);">选择门店</button> 
+ -->	            </td>
 	            <td>
 	            </td>
 	                
